--- a/Sigcomt/Source/Sigcomt.Web/Web.config
+++ b/Sigcomt/Source/Sigcomt.Web/Web.config
@@ -1,149 +1,149 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   Para obtener más información acerca de cómo configurar una aplicación ASP.NET, consulte
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <configSections>    
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ImageFilePath" value="Archivos/File/" />
-    <add key="TempFilePath" value="Archivos/Temp/" />
-    <add key="TimeOutSession" value="60" />
-    <add key="CultureNameDefault" value="es-PE" />
-    <add key="TimeZoneId" value="SA Pacific Standard Time" />
-    <add key="TimeZoneGMT" value="-5" />
-    <add key="ValidacionAD" value="0" />
-    
-    <add key="BaseUrlApiService" value="http://localhost:1873/api/" />
-    <add key="WS_Account_Login" value="http://localhost:1873/api/Account/Login" />    
-    <add key="WS_Usuario_GetAllPaging" value="http://localhost:1873/api/Usuario/GetAllPaging" />
-    
-    <add key="WS_TipoProducto_GetAllPaging" value="http://localhost:1873/api/TipoProducto/GetAllPaging" />
-    <add key="WS_TipoProducto_GetById" value="http://localhost:1873/api/TipoProducto/GetById" />
-    <add key="WS_TipoProducto_GetAll" value="http://localhost:1873/api/TipoProducto/GetAll" />
-    <add key="WS_TipoProducto_Add" value="http://localhost:1873/api/TipoProducto/Add" />
-    <add key="WS_TipoProducto_Update" value="http://localhost:1873/api/TipoProducto/Update" />
-    <add key="WS_TipoProducto_Delete" value="http://localhost:1873/api/TipoProducto/Delete" />
-
-    <add key="WS_Vale_GetAllPaging" value="http://localhost:1873/api/Vale/GetAllPaging" />
-    <add key="WS_Vale_GetById" value="http://localhost:1873/api/Vale/GetById" />
-    <add key="WS_Vale_GetAll" value="http://localhost:1873/api/Vale/GetAll" />
-    <add key="WS_Vale_Add" value="http://localhost:1873/api/Vale/Add" />
-    <add key="WS_Vale_Update" value="http://localhost:1873/api/Vale/Update" />
-    <add key="WS_Vale_Delete" value="http://localhost:1873/api/Vale/Delete" />
-
-    <add key="WS_Alerta_Update" value="http://localhost:1873/api/Alerta/Update" />
-    <add key="WS_Alerta_GetCount" value="http://localhost:1873/api/Alerta/GetCount" />
-    <add key="WS_Alerta_SendEmail" value="http://localhost:1873/api/Alerta/SendEmail" />    
-
-    <add key="WS_Carga_GetAllPaging" value="http://localhost:1873/api/Carga/GetAllPaging" />
-    <add key="WS_Carga_GetById" value="http://localhost:1873/api/Carga/GetById" />
-    <add key="WS_Carga_GetAll" value="http://localhost:1873/api/Carga/GetAll" />
-    <add key="WS_Carga_Add" value="http://localhost:1873/api/Carga/Add" />
-    <add key="WS_Carga_Update" value="http://localhost:1873/api/Carga/Update" />
-    <add key="WS_Carga_Delete" value="http://localhost:1873/api/Carga/Delete" />
-
-    <add key="WS_Canje_Add" value="http://localhost:1873/api/Canje/Add" />
-
-    <add key="WS_Envio_GetAllPaging" value="http://localhost:1873/api/Envio/GetAllPaging" />
-    <add key="WS_Envio_GetById" value="http://localhost:1873/api/Envio/GetById" />
-    <add key="WS_Envio_GetAllPagingLog" value="http://localhost:1873/api/Envio/GetAllPagingLog" />
-    <add key="WS_Envio_GetByIdLog" value="http://localhost:1873/api/Envio/GetByIdLog" />
-    <add key="WS_Envio_GetAllExport" value="http://localhost:1873/api/Envio/GetAllExport" />
-  
+    <add key="webpages:Version" value="3.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="ImageFilePath" value="Archivos/File/"/>
+    <add key="TempFilePath" value="Archivos/Temp/"/>
+    <add key="TimeOutSession" value="60"/>
+    <add key="CultureNameDefault" value="es-PE"/>
+    <add key="TimeZoneId" value="SA Pacific Standard Time"/>
+    <add key="TimeZoneGMT" value="-5"/>
+    <add key="ValidacionAD" value="0"/>
+    <add key="BaseUrlApiService" value="http://localhost:1873/api/"/>
+    <add key="WS_Account_Login" value="http://localhost:1873/api/Account/Login"/>
+    <add key="WS_Usuario_GetAllPaging" value="http://localhost:1873/api/Usuario/GetAllPaging"/>
+    <add key="WS_TipoProducto_GetAllPaging" value="http://localhost:1873/api/TipoProducto/GetAllPaging"/>
+    <add key="WS_TipoProducto_GetById" value="http://localhost:1873/api/TipoProducto/GetById"/>
+    <add key="WS_TipoProducto_GetAll" value="http://localhost:1873/api/TipoProducto/GetAll"/>
+    <add key="WS_TipoProducto_Add" value="http://localhost:1873/api/TipoProducto/Add"/>
+    <add key="WS_TipoProducto_Update" value="http://localhost:1873/api/TipoProducto/Update"/>
+    <add key="WS_TipoProducto_Delete" value="http://localhost:1873/api/TipoProducto/Delete"/>
+    <add key="WS_Vale_GetAllPaging" value="http://localhost:1873/api/Vale/GetAllPaging"/>
+    <add key="WS_Vale_GetById" value="http://localhost:1873/api/Vale/GetById"/>
+    <add key="WS_Vale_GetAll" value="http://localhost:1873/api/Vale/GetAll"/>
+    <add key="WS_Vale_Add" value="http://localhost:1873/api/Vale/Add"/>
+    <add key="WS_Vale_Update" value="http://localhost:1873/api/Vale/Update"/>
+    <add key="WS_Vale_Delete" value="http://localhost:1873/api/Vale/Delete"/>
+    <add key="WS_Alerta_Update" value="http://localhost:1873/api/Alerta/Update"/>
+    <add key="WS_Alerta_GetCount" value="http://localhost:1873/api/Alerta/GetCount"/>
+    <add key="WS_Alerta_SendEmail" value="http://localhost:1873/api/Alerta/SendEmail"/>
+    <add key="WS_Carga_GetAllPaging" value="http://localhost:1873/api/Carga/GetAllPaging"/>
+    <add key="WS_Carga_GetById" value="http://localhost:1873/api/Carga/GetById"/>
+    <add key="WS_Carga_GetAll" value="http://localhost:1873/api/Carga/GetAll"/>
+    <add key="WS_Carga_Add" value="http://localhost:1873/api/Carga/Add"/>
+    <add key="WS_Carga_Update" value="http://localhost:1873/api/Carga/Update"/>
+    <add key="WS_Carga_Delete" value="http://localhost:1873/api/Carga/Delete"/>
+    <add key="WS_Canje_Add" value="http://localhost:1873/api/Canje/Add"/>
+    <add key="WS_Envio_GetAllPaging" value="http://localhost:1873/api/Envio/GetAllPaging"/>
+    <add key="WS_Envio_GetById" value="http://localhost:1873/api/Envio/GetById"/>
+    <add key="WS_Envio_GetAllPagingLog" value="http://localhost:1873/api/Envio/GetAllPagingLog"/>
+    <add key="WS_Envio_GetByIdLog" value="http://localhost:1873/api/Envio/GetByIdLog"/>
+    <add key="WS_Envio_GetAllExport" value="http://localhost:1873/api/Envio/GetAllExport"/>
   </appSettings>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" />
+      <forms loginUrl="~/Account/Login"/>
     </authentication>
-    <sessionState mode="InProc" timeout="60" />
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" requestValidationMode="4.5" useFullyQualifiedRedirectUrl="true" maxRequestLength="1048576" requestLengthDiskThreshold="124576" executionTimeout="3600" maxQueryStringLength="2097151" />
-  <customErrors mode="On" defaultRedirect="~/Error">
-    <error statusCode="404" redirect="~/Error/NotFound"></error>
-    <error statusCode="500" redirect="~/Error/ServerError"></error>
-  </customErrors>  
+    <sessionState mode="InProc" timeout="60"/>
+    <compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5" requestValidationMode="4.5" useFullyQualifiedRedirectUrl="true" maxRequestLength="1048576" requestLengthDiskThreshold="124576" executionTimeout="3600" maxQueryStringLength="2097151"/>
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error statusCode="404" redirect="~/Error/NotFound"/>
+      <error statusCode="500" redirect="~/Error/ServerError"/>
+    </customErrors>
   </system.web>
   <log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level %logger - %message%newline" />
+        <conversionPattern value="%date %-5level %logger - %message%newline"/>
       </layout>
     </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Log/Log.txt" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <staticLogFileName value="true" />
+      <file value="Log/Log.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="1MB"/>
+      <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level %logger - %message%newline" />
+        <conversionPattern value="%date %-5level %logger - %message%newline"/>
       </layout>
     </appender>
     <root>
-      <level value="All" />
-      <appender-ref ref="DebugAppender" />
-      <appender-ref ref="RollingFileAppender" />
+      <level value="All"/>
+      <appender-ref ref="DebugAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
     </root>
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="2147483647"></jsonSerialization>
+        <jsonSerialization maxJsonLength="2147483647"/>
       </webServices>
     </scripting>
   </system.web.extensions>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>
       </customHeaders>
     </httpProtocol>
     <staticContent>
-      <remove fileExtension=".woff" />
-      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".woff"/>
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff"/>
     </staticContent>
     <security>
       <requestFiltering>
-        <requestLimits maxQueryString="2147483647" />
+        <requestLimits maxQueryString="2147483647"/>
       </requestFiltering>
     </security>
   </system.webServer>
