--- a/Sigcomt/Source/Sigcomt.WebApi/Web.config
+++ b/Sigcomt/Source/Sigcomt.WebApi/Web.config
@@ -11,24 +11,28 @@
   </configSections>
   <connectionStrings>
     <add name="ConnectionStringSQL" connectionString="Data Source=10.26.10.152;Initial Catalog=BancoFalabellaBI;User ID=sa; Password=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient" />
-    
   </connectionStrings>
   <appSettings>
     <add key="TimeOutCache" value="1440" />
     <!--Falabella-->
     <!--<add key="ConnectionActiveDirectory" value="LDAP://172.22.4.15"/>
     <add key="DominiosAD" value="bancofalabella.com.pe;falabella.com;falabella.com.pe;falabella.cl"/>-->
-    
     <add key="ConnectionActiveDirectory" value="LDAP://sigcomt.com" />
     <add key="DominiosAD" value="sigcomt.com" />
-    
   </appSettings>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" />
-    <httpModules>
-    </httpModules>
+    <httpModules />
   </system.web>
   <log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
