--- a/Sigcomt/Source/Sigcomt.WinForms.BulkCopy/App.config
+++ b/Sigcomt/Source/Sigcomt.WinForms.BulkCopy/App.config
@@ -6,7 +6,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <connectionStrings>
-    <add name="ConnectionStringSQL" connectionString="Data Source=LP11\MSSQLSERVER2;Initial Catalog=Comisiones;uid=sa;pwd=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionStringSQL" connectionString="Data Source=LP12;Initial Catalog=ComisionesQA;uid=sa;pwd=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient"/>
     <!--<add name="ConnectionStringSQL" connectionString="Data Source=LP12;Initial Catalog=ComisionesQA;uid=sa;pwd=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
@@ -18,6 +18,9 @@
     <add key="RutaArchivoOut" value="Archivo\Out\"/>
     <add key="RutaArchivoCopy" value="D:\Pruebas comisiones\LogCarga_"/>
     <add key="NombreArchivo" value="LogCarga.xlsx"/>
+    <add key="DominiosAD" value="sigcomt.com,bancofalabella.com.pe,falabella.com,falabella.com.pe,falabella.cl" />
+    <!--<add key="DominiosAD" value="sigcomt.com" />-->
+    <add key="ValidarAD" value="0" /><!--0 => No se valida con AD, 1 => Se valida con AD-->
   </appSettings>
   <log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
