--- a/Sigcomt/Source/Sigcomt.Business.Logic/Sigcomt.Business.Logic.csproj
+++ b/Sigcomt/Source/Sigcomt.Business.Logic/Sigcomt.Business.Logic.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sigcomt.Business.Logic</RootNamespace>
     <AssemblyName>Sigcomt.Business.Logic</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -62,12 +63,10 @@
     <Compile Include="Interfaces\IExcelBL.cs" />
     <Compile Include="Interfaces\IItemTablaBL.cs" />
     <Compile Include="Interfaces\ILogBL.cs" />
-    <Compile Include="Interfaces\ILoteBL.cs" />
     <Compile Include="Interfaces\IRolBL.cs" />
     <Compile Include="Interfaces\IUsuarioBL.cs" />
     <Compile Include="ItemTablaBL.cs" />
     <Compile Include="LogBL.cs" />
-    <Compile Include="LoteBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolBL.cs" />
     <Compile Include="UsuarioBL.cs" />
