--- a/Sigcomt/Source/Sigcomt.Common/packages.config
+++ b/Sigcomt/Source/Sigcomt.Common/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="Quartz" version="2.5.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
