--- a/Sigcomt/Source/Sigcomt.DataAccess/packages.config
+++ b/Sigcomt/Source/Sigcomt.DataAccess/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSharp.Portable-Singleton" version="2.0.0.4" targetFramework="net45" />
+  <package id="Dapper" version="1.50.4" targetFramework="net452" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net45" />
 </packages>
