--- a/Sigcomt/Source/Sigcomt.WinForms.BulkCopy/App.config
+++ b/Sigcomt/Source/Sigcomt.WinForms.BulkCopy/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -8,6 +8,8 @@
   <connectionStrings>
     <add name="ConnectionStringSQL" connectionString="Data Source=LP12;Initial Catalog=ComisionesQA;uid=sa;pwd=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient"/>
     <!--<add name="ConnectionStringSQL" connectionString="Data Source=LP12;Initial Catalog=ComisionesQA;uid=sa;pwd=sigcomt; Connect Timeout=200;" providerName="System.Data.SqlClient" />-->
+    <add name="ConnectionActiveDirectory" connectionString="LDAP://172.22.4.15" />
+    <!--<add name="ConnectionActiveDirectory" connectionString="LDAP://sigcomt.com" />-->
   </connectionStrings>
   <appSettings>
     <add key="EmailPattern" value="sigone@sigcomt.com"/>
@@ -18,8 +20,6 @@
     <add key="RutaArchivoOut" value="Archivo\Out\"/>
     <add key="RutaArchivoCopy" value="D:\Pruebas comisiones\LogCarga_"/>
     <add key="NombreArchivo" value="LogCarga.xlsx"/>
-    <add key="DominiosAD" value="sigcomt.com,bancofalabella.com.pe,falabella.com,falabella.com.pe,falabella.cl" />
-    <!--<add key="DominiosAD" value="sigcomt.com" />-->
     <add key="ValidarAD" value="0" /><!--0 => No se valida con AD, 1 => Se valida con AD-->
   </appSettings>
   <log4net>
